--- a/public/stylesheets/index.scss
+++ b/public/stylesheets/index.scss
@@ -97,13 +97,16 @@ section.home{
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 32px 64px;
+        padding: 32px 64px;        
 
         #mobile-menu, .show-mobile-menu-icon{
             display: none;
         }
 
         div.logo{
+
+            transform: translateX(-200%);
+
             h1{
                 visibility: hidden; 
                 width: 0; 
@@ -116,6 +119,9 @@ section.home{
         }
 
         nav{
+
+            transform: translateX(200%);
+
             ul{
                 width: 530px;
                 height: 35px;
@@ -183,6 +189,9 @@ section.home{
                     font-weight: 700;
                     width: 70%;
                     color: $primary-grey;
+
+                    //anim-property
+                    opacity: 0;
                 }
     
                 p{
@@ -194,9 +203,16 @@ section.home{
                     text-align: start;
                     font-weight: 500;
 
+                    //anim-property
+                    opacity: 0;
+
                     strong{
                         color: $primary-blue;
                     }
+                }
+
+                a{
+                    margin-left: -300px;
                 }
             }
         }
@@ -209,6 +225,7 @@ section.home{
 
             img{
                 width: 100%;
+                opacity: 0;
             }
         }
     }
@@ -220,7 +237,7 @@ section.features{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: center;    
 
     br{
         display: none;
@@ -232,6 +249,8 @@ section.features{
             text-align: center;
             font-size: 32px;
             font-weight: 700;
+            opacity: 0;
+            transform: translateX(400%);
         }
     }
 
@@ -249,6 +268,16 @@ section.features{
             flex-direction: column;
             align-items: center;
             justify-content: center;
+
+            &:nth-child(1){
+                transform: translateX(-200%);
+            }
+            &:nth-child(2){
+                opacity: 0;
+            }
+            &:nth-child(3){
+                transform: translateX(200%);
+            }
 
             div.feature-card-img{
                 img{
@@ -293,6 +322,10 @@ section.prices{
             font-size: 32px;
             font-weight: 700;
             color: #727176;
+
+            span{
+                opacity: 0;
+            }
         }
     }
 
@@ -306,6 +339,9 @@ section.prices{
             flex-direction: row;
             align-items: center;
             justify-content: space-between;
+
+            width: 0;
+            opacity: 0;
             
             div.price-card{
                 background: #C4C4C4;
@@ -318,17 +354,6 @@ section.prices{
 
             div.small{
                 flex: .28;
-            }
-        }
-    }
-
-    article.demo-video{
-        div.video-container{
-            width: 100%;
-            padding-bottom: 32px;
-
-            video{
-                width: 100%;
             }
         }
     }
@@ -349,32 +374,7 @@ section.videos{
             font-size: 32px;
             font-weight: 700;
             color: #727176;
-        }
-    }
-
-    article.prices{
-        display: flex;
-        flex-direction: column;
-
-        div.price-cards{
-            width: 100%;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: space-between;
-            
-            div.price-card{
-                background: #C4C4C4;
-                height: 400px;
-            }
-
-            div.big {
-                flex: .68;
-            }
-
-            div.small{
-                flex: .28;
-            }
+            opacity: 0;
         }
     }
 
@@ -385,6 +385,7 @@ section.videos{
 
             video{
                 width: 100%;
+                transform: translateX(200%);
             }
         }
     }
@@ -452,7 +453,7 @@ section.getting-started{
 }
 
 section.contact{
-    padding: 128px;
+    padding: 168px 128px;
 
     div.contact-content{
         display: flex;
@@ -462,6 +463,7 @@ section.contact{
         article.faq{
 
             flex: .4;
+            transform: translateX(-800%);
 
             h2{
                 font-size: 32px;
@@ -586,6 +588,7 @@ section.contact{
             h2{
                 font-size: 32px;
                 color: $secondary-blue;
+                opacity: 0;
             }
 
             h3{
@@ -594,6 +597,7 @@ section.contact{
                 color: $primary-grey;
                 font-weight: 700;
                 position: relative;
+                opacity: 0;
             }
 
             form{
@@ -602,6 +606,7 @@ section.contact{
                 grid-template-columns: 1fr 1fr;
                 grid-auto-columns: minmax(2, 2);
                 grid-auto-rows: auto;
+                opacity: 0;
 
                 button{
                     cursor: pointer;
@@ -614,6 +619,7 @@ section.contact{
                     font-weight: 600;
                     transition: $transition-duration;
                     border: none !important;
+                    opacity: 0;
 
                     &:hover{
                         background-color: $secondary-blue;
