--- a/public/stylesheets/resp_1150.css
+++ b/public/stylesheets/resp_1150.css
@@ -38,23 +38,26 @@
   section.features div.feature-cards article div.text-container p {
     font-size: 15px;
   }
-  section.ads {
-    padding: 0 32px 32px 32px;
+  section.prices {
+    padding: 0 32px;
   }
-  section.ads div.subtitle-container h2 {
+  section.prices div.subtitle-container h2 {
     font-size: 28px;
   }
-  section.ads article.prices div.price-cards div.big {
+  section.prices article.prices div.price-cards div.big {
     -webkit-box-flex: .65;
         -ms-flex: .65;
             flex: .65;
   }
-  section.ads article.prices div.price-cards div.small {
+  section.prices article.prices div.price-cards div.small {
     -webkit-box-flex: .32;
         -ms-flex: .32;
             flex: .32;
   }
-  section.ads article.demo-video div.subtitle-container h2 {
+  section.videos {
+    padding: 0 32px;
+  }
+  section.videos article.demo-video div.subtitle-container h2 {
     font-size: 28px;
   }
   section.getting-started {
