--- a/public/stylesheets/resp_516.css
+++ b/public/stylesheets/resp_516.css
@@ -45,38 +45,35 @@
   section.features div.feature-cards article div.text-container p {
     font-size: 16px;
   }
-  section.ads {
-    padding: 0 32px 32px 32px;
-  }
-  section.ads div.subtitle-container h2 {
+  section.prices div.subtitle-container h2 {
     font-size: 26px;
     margin: 32px 0;
   }
-  section.ads article.prices div.price-cards {
+  section.prices article.prices div.price-cards {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
     height: 600px;
   }
-  section.ads article.prices div.price-cards div.big {
+  section.prices article.prices div.price-cards div.big {
     width: 100%;
     width: 80%;
     -webkit-box-flex: .55;
         -ms-flex: .55;
             flex: .55;
   }
-  section.ads article.prices div.price-cards div.small {
+  section.prices article.prices div.price-cards div.small {
     width: 100%;
     width: 80%;
     -webkit-box-flex: .4;
         -ms-flex: .4;
             flex: .4;
   }
-  section.ads article.demo-video div.subtitle-container br {
+  section.videos article.demo-video div.subtitle-container br {
     display: none;
   }
-  section.ads article.demo-video div.video-container video {
+  section.videos article.demo-video div.video-container video {
     -webkit-transform: scale(1.15);
             transform: scale(1.15);
   }
@@ -120,10 +117,20 @@
     border-radius: 25px;
   }
   section.contact {
-    padding: 32px 16px;
+    padding: 16px;
+  }
+  section.contact div.contact-content article.faq h2 {
+    font-size: 28px;
   }
   section.contact div.contact-content article.faq div.dropdown div.row header h4 {
     font-size: 16px;
+  }
+  section.contact div.contact-content article.contact-form h2 {
+    font-size: 28px;
+  }
+  section.contact div.contact-content article.contact-form h3 {
+    font-size: 20px;
+    margin: 0;
   }
   section.contact div.contact-content article.contact-form form {
     display: -ms-grid;
