--- a/public/stylesheets/resp_516.scss
+++ b/public/stylesheets/resp_516.scss
@@ -72,11 +72,7 @@
         }
     }
     
-    section.ads{
-        
-        padding: 0 32px 32px 32px;
-    
-        
+    section.prices{
         div.subtitle-container{
             h2{
                 font-size: 26px;
@@ -103,7 +99,9 @@
                 }
             }
         }
-    
+    }
+
+    section.videos{
         article.demo-video{            
             div.subtitle-container{
                 br{
@@ -168,10 +166,15 @@
     }
 
     section.contact{
-        padding: 32px 16px;
+        padding: 16px;
     
         div.contact-content{
-            article.faq{    
+            article.faq{
+
+                h2{
+                    font-size: 28px;
+                }
+
                 div.dropdown{
                     div.row{    
                         header{
@@ -184,6 +187,16 @@
             }
             
             article.contact-form{
+
+                h2{
+                    font-size: 28px;
+                }
+
+                h3{
+                    font-size: 20px;
+                    margin: 0;
+                }
+
                 form{
 
                     display: grid;
